# LibGerberEditor

./: Cargo.toml  LICENSE  README.md
src/: board.rs  error.rs  gerber.rs  gerber_ascii.rs  layer.rs  lib.rs  unit_able.rs
src/excellon_format/: mod.rs
src/gerber/: kicad_font.gbr
test/: demo.drd
test/mobo/: mobo-B_Cu.gbr  mobo-B_Mask.gbr  mobo-B_Paste.gbr  mobo-B_Silkscreen.gbr  mobo-Edge_Cuts.gbr  mobo-F_Cu.gbr  mobo-F_Mask.gbr  mobo-F_Paste.gbr  mobo-F_Silkscreen.gbr  mobo-In1_Cu.gbr  mobo-In2_Cu.gbr
