[package]
name = "lib_gerber_edit"
version = "0.1.0"
edition = "2024"

[dependencies]
gerber_parser = { git = "https://github.com/nicolube/gerber-parser.git", branch = "master", version = "0.4.0" }
lazy_static = "1.5.0"
derive_more = { version = "2.0.1", features = ["display", "error"]}
thiserror = "2.0.16"
serde = { version = "1.0.225", features = ["derive"] }
chrono = "0.4.42"